[package]
name = "kakuin-workload-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "Rust SPIFFE Workload API client. Connects to the agent's gRPC endpoint, fetches X.509 SVIDs, subscribes to rotation updates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pleme-io/kakuin-workload-api"
readme = "README.md"
keywords = ["spiffe", "spire", "workload-api", "mtls", "identity"]
categories = ["authentication", "cryptography", "network-programming"]

[lib]
name = "kakuin_workload_api"
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.12", default-features = false, features = ["channel", "codegen", "prost"] }
prost = "0.13"
prost-types = "0.13"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyper = "1"
http = "1"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.50", features = ["macros", "rt", "sync", "fs", "net"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
thiserror = "2"
tracing = "0.1"
x509-cert = { version = "0.2", features = ["pem", "std"] }
ed25519-dalek = "2.1"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
hex = "0.4"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["full", "test-util"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
